# claraity-code

./: .env.example  .gitignore  =0.4.24  AGENT_TO_AGENT_ORCHESTRATION.md  ANALYSIS_CURRENT_STATE.md  CLARAITY.md  CLARAITY_IMPLEMENTATION_PLAN.md  CLARITY_ARCHITECTURE.md  CLARITY_PHASE2_COMPLETE.md  CLARITY_QUICKSTART.md  CLARITY_SESSION_SUMMARY.md  CLARITY_UNIFIED_GUIDE.md  CLARITY_VIZ_USAGE.md  CLAUDE.md  CLAUDE_BACKUP_2025-10-13.md  CODEBASE_CONTEXT.md  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  ENHANCED_PROMPTS_TEST_RESULTS.md  FINAL_STATUS.md  FLOW_VIZ_USAGE.md  HISTORICAL_SESSIONS.md  HOOKS_ARCHITECTURE_INPROCESS.md  HOOKS_DECISION_ANALYSIS.md  HOOKS_DESIGN_REVIEW.md  IMPLEMENTATION_PLAN_NEXT_SESSION.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_ROADMAP.md  JIRA_CONFLUENCE.md  MEMORY_AND_WORKFLOW_ANALYSIS.md  MEMORY_TEST_ANALYSIS.md  NEXT_SESSION_REACT_UI.md  NEXT_SESSION_START_HERE.md  PRODUCTION_MEMORY_TEST_RESULTS.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  QWEN3_FINDINGS_SUMMARY.md  QWEN3_PROMPT_STRATEGY.md  RCA_COMPLETE.md  (+92 more)
.claraity/: claraity_beads.jsonl  claraity_knowledge.jsonl  config.yaml
.claraity/agents/: doc-writer.md  test-writer.md
.claraity/memory/: MEMORY.md  build-and-publish-process.md  multi-root-workspace.md  no-session-redaction.md  run-command-cancellation-context.md  task-tools-testing.md  user-communication-style.md  user-profile.md
.claraity/plans/: 4f0d4c85-5ebc-4ffc-9493-fc3b45a9f1c5.md  5e05bcbd-9c63-4e0e-a066-ba427736ee9c.md  71fb0e0d-15dc-4801-861d-dd6551355b27.md  9a6d8e89-ce18-40fb-83bc-884b0b9a325b.md  a3d6a018-50e4-4697-bb0b-df0673e69cab.md  c9440d80-6b99-4486-86ac-d42c2adbbae6.md  director_plan.md  director_planner_enhancement.md  dummy_plan.md  rag_chatbot_implementation.md  session-20260213-090240-67475146.md  session-20260216-222955-db80d961.md  session-20260309-233141-43ed57a3.md  session-20260315-171025-9eea0603.md  session-20260325-113422-6e331081.md  session-20260327-130053-82c0cc84.md  session-20260328-135826-114f54ae.md  session-20260329-142412-f1b0a9d9.md  session-20260329-161715-c24ec141.md  session-20260330-114142-33677371.md  session-20260331-185227-d4e93c4d.md  session-20260401-080734-fd254046.md  session-20260410-160334-87ad715f.md  session-20260411-071439-e39193e1.md  session-20260411-102233-ba18bf9c.md  session-20260423-211350-20bbc37d.md
.clarity/: ai-coding-agent.db.backup  config.yaml
.clarity/examples/: README.md  audit.py  validation.py
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  doc-writer.md  test-writer.md
.claude/examples/: README.md  backup.py  git_auto_commit.py  rate_limiting.py
.devcontainer/: CLAUDE_CLI_SETUP.md  CLAUDE_CODE_SETUP.md  Dockerfile.optional  README.md  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: build-vsix.yml  ci.yml  release.yml
claraity-site/: index.html
claraity-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  claraity-vscode-0.1.0.vsix  esbuild.mjs  jest.config.js  package-lock.json  package.json  readme.md  tsconfig.json  vitest.config.ts
claraity-vscode/__mocks__/: vscode.js  ws.js
claraity-vscode/docs/: LESSONS_LEARNED.md
claraity-vscode/media/: hljs-vscode.css
claraity-vscode/shared/: protocol.ts
claraity-vscode/src/: agent-connection.ts  code-lens-provider.ts  (+10 more)
clarity-ui/: README.md  architecture.html  graph.json  index.html  package-lock.json  package.json  vite.config.ts
docs/: AGENT_DECOMPOSITION.md  AI_Models_Reference.md  ANTHROPIC_GRADE_SEARCH_TOOLS.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  CHATGPT_REVIEW_PACKAGE.md  CLAUDE_CLI_PROMPTS.md  CLAUDE_CODE_ARCHITECTURE_ANALYSIS.md  CODEBASE_CONTEXT.md  CODEBASE_SURVEY_PLAN.md  CODE_INTELLIGENCE_AGENT_ANALYSIS.md  CODE_INTELLIGENCE_DESIGN_DECISIONS.md  CODE_INTELLIGENCE_PRELIMINARY_RESEARCH.md  COMPACTION_REDESIGN.md  COMPETITIVE_ANALYSIS.md  CONTEXT_ASSEMBLY_AND_TRACE.md  CONTEXT_MANAGEMENT_IMPLEMENTATION.md  CONTEXT_MANAGEMENT_PLAN.md  CONTEXT_MANAGEMENT_V2_DETAILED_PLAN.md  CONTEXT_WINDOW_PROGRESS_BAR.md  CONTRIBUTING.md  DEEP_CODE_REVIEW.md  DELEGATION_TOOL_ANALYSIS.md  DEPLOYMENT_WORKFLOW.md  DIRECTOR_PHILOSOPHY.md  DIRECTOR_ROADMAP.md  EXECUTION_FLOWS.md  FILE_OPERATIONS_CODE_REVIEW.md  FLOW_VIZ_USAGE.md  GETTING_STARTED.md  HOOKS_ARCHITECTURE.md  INTEGRATION_ROADMAP.md  INVESTIGATION_SUMMARY.md  KNOWLEDGE_BASE_IMPLEMENTATION.md  KNOWLEDGE_BASE_PLAN.md  LOGGING_INFRASTRUCTURE.md  MCP_INFRASTRUCTURE.md  MCP_JIRA_INTEGRATION_PLAN.md  MEMORY_DEEP_ANALYSIS.md  MULTI_SESSION_PLAN.md  (+37 more)
examples/: PromptCachingDemo.java  prompt_caching_demo.py  thinking_demo.py
scripts/: bench_lsp.py  migrate_claraity_implementation_specs.py  migrate_clarity_implementation_specs.py  migrate_phase_system.py  populate_implementation_specs.py  populate_phase1_phase2_specs.py  test_jira_connection.py  test_large_file_generation.py
specs/: README.md
src/: __init__.py  cli.py  hello_world.py
tests/: conftest.py  test_agent_interface.py  test_basic_functionality.py  test_checkpoint_manager.py  test_code_intelligence_config.py  test_context_assembly_report.py  test_e2e_session_persistence.py  test_e2e_verification.py  test_error_classification.py  test_error_recovery.py  test_example.py  test_feature.py  test_file_reference_parser.py  test_headroom_guard.py  test_hello_world.py  test_llm_failure_handler.py  test_long_running_controller.py  test_lsp_cache.py  test_lsp_client_manager.py  test_lsp_tools.py  test_memory_observation_integration.py  test_observation_store.py  test_orchestration_basic.py  test_permission_modes.py  test_platform_windows.py  test_prompt.py  test_prompt.txt  test_sample_functionality.py  test_scanner_trace.py  test_search_tools.py  test_session_manager_trace.py  test_simple.py  test_trace_config.py  test_transcript_logger.py  test_usage_analyzer.py  test_validation_framework.py  test_web_tools.py  test_windows_integration.py  test_workflow_integration.py
validation-results/: validation_report_20251105_134644.md  validation_report_20251105_141849.md  validation_report_20251105_224414.md  validation_report_20251105_224442.md
(+572 files in other folders)
