[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "Advanced AI coding agent optimized for small open-source LLMs with state-of-the-art memory and context management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "coding-agent", "llm", "rag", "memory-management", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "transformers>=4.40.0",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.4.24",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "tiktoken>=0.7.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "gitpython>=3.1.43",
    "watchdog>=4.0.0",
    "psutil>=5.9.8",
    "textual>=0.47.0",
    "structlog>=24.1.0",
    "openai>=1.12.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

ollama = [
    "ollama>=0.2.0",
]

vllm = [
    "vllm>=0.4.0",
]

all = [
    "ai-coding-agent[dev,ollama,vllm]",
]

[project.scripts]
ai-agent = "src.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-coding-agent"
Documentation = "https://github.com/yourusername/ai-coding-agent/docs"
Repository = "https://github.com/yourusername/ai-coding-agent"
Issues = "https://github.com/yourusername/ai-coding-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "E402",  # module level import not at top of file
    "E741",  # ambiguous variable name
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "B006",  # mutable argument default
    "F401",  # imported but unused (handled per-file)
    "F841",  # local variable assigned but never used
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F811", "E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "sentence_transformers.*",
    "chromadb.*",
    "tree_sitter.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require network/API keys)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
